[package]
name = "outline_api"
version = "1.0.0"
edition = "2021"
authors = ["sigseg5"]
license = "MIT"
description = "Implementation of Outline VPN server API control"
readme = "README.md"
homepage = "https://github.com/sigseg5/outline-api"
repository = "https://github.com/sigseg5/outline-api"
keywords = ["outline", "oulinevpn", "vpn", "api"]
categories = ["command-line-utilities"]

exclude = [
    ".github/*",
    "api.yml",
]

[dependencies]
reqwest = { version = "0.11.20", features = ["blocking"] }
toml = "0.7.7"
serde_json = "1.0.105"
log = "0.4.20"
env_logger = "0.10.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
